--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,37 @@
 body {
+  padding: 0;
+  margin: 0;
   background-image: url(images/bg-desktop.svg);
+  background-color: hsl(257, 40%, 49%);
+  font-family: 'Open Sans', sans-serif;
+  color: #fff;
+  font-weight: 400;
+}
+
+* {
+  box-sizing: border-box;
+}
+  /* .attribution { font-size: 11px; text-align: center; }
+  .attribution a { color: hsl(228, 45%, 44%); } */
+  h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    /* margin-top: 50px; */
+    padding-top: 40px;
+
+
+  }
+.illustration {
+  float: left;
+  margin-right: 50px;
+  margin-left: 50px;
+}
+
+button {
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+.text {
+  margin-right: 45px;
 }
