--- a/styles.css
+++ b/styles.css
@@ -2,36 +2,92 @@ body {
   padding: 0;
   margin: 0;
   background-image: url(images/bg-desktop.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
   background-color: hsl(257, 40%, 49%);
   font-family: 'Open Sans', sans-serif;
   color: #fff;
   font-weight: 400;
+  height: 100%;
 }
 
 * {
   box-sizing: border-box;
+}
+
+#container {
+  min-height: 100%;
 }
   /* .attribution { font-size: 11px; text-align: center; }
   .attribution a { color: hsl(228, 45%, 44%); } */
   h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
-    /* margin-top: 50px; */
     padding-top: 40px;
-
-
+    line-height: 3.125rem;
   }
+
+.logo-div {
+  padding-left: 50px;
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
+
+.logo-image {
+  height: 30px;
+}
+
+.intro {
+  padding-left: 50px;
+  overflow: auto;
+}
+
 .illustration {
   float: left;
   margin-right: 50px;
-  margin-left: 50px;
+
 }
+
 
 button {
   cursor: pointer;
-  border-radius: 12px;
+  border-radius: 20px;
+  padding: 8px 30px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .text {
   margin-right: 45px;
+}
+
+footer {
+
+  height: 100px;
+  position: relative;
+  text-align: right;
+padding-right: 50px;
+padding-top: 20px;
+}
+
+a {
+  border-radius: 90%;
+  border: 1px solid #fff;
+  padding: 5px 10px;
+  margin: 5px;
+  color: #fff;
+  font-size: 14px;
+}
+
+/* social media icons hover effect */
+
+.fa-facebook-f:hover {
+  color: #3b5998
+}
+
+.fa-twitter:hover {
+  color: #00acee;
+}
+
+.fa-instagram:hover {
+  color: #3f729b;
 }
